# LiveStack

./: .env  .gitignore  Cargo.toml  learning.md  readme.md
api/: Cargo.toml  futureimpl.md
api/src/: main.rs  request_input.rs  request_output.rs
api/src/middleware/: auth.rs
api/src/routes/: user.rs  website.rs
api/src/types/: mod.rs  request_input.rs  request_output.rs
consumer/: Cargo.toml  readme.md
consumer/src/: main.rs
messaging/: Cargo.toml
messaging/src/: config.rs  lib.rs  pool.rs
producer/: Cargo.toml
producer/src/: main.rs  util.rs
store/: Cargo.toml
store/migrations/2026-02-11-094356-0000_better-uptime/: up.sql
store/src/: config.rs  lib.rs  schema.rs
store/src/models/: user.rs  website.rs
