[package]
name = "store"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres" , "chrono", "r2d2"] }
dotenvy = "0.15"
pq-sys = { version = "0.6", features = ["bundled"] }
openssl-sys = { version = "0.9.100", features = ["vendored"] } 
uuid = {version ="1.20.0" , features = ["v4"]}
chrono = {version = "0.4.43", features = ["serde"]}
diesel-derive-enum = {version ="2" , features = ["postgres"]}
serde = { version = "1.0.228" , features = ["derive"]}
